--- a/css/style.css
+++ b/css/style.css
@@ -132,25 +132,25 @@ header {
     0% {
         background-image:
             linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)),
-            url(/images/hero1.jpg);
+            url(./images/hero1.jpg);
     }
 
     33% {
         background-image:
             linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)),
-            url(/images/hero2.jpg);
+            url(./images/hero2.jpg);
     }
 
     66% {
         background-image:
             linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)),
-            url(/images/hero3.jpg);
+            url(./images/hero3.jpg);
     }
 
     100% {
         background-image:
             linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)),
-            url(/images/hero1.jpg);
+            url(./images/hero1.jpg);
     }
 }
 
@@ -310,7 +310,7 @@ header {
 .specials .seprator {
     width: 200px;
     height: 50px;
-    background-image: url(/images/seprator.svg);
+    background-image: url(./images/seprator.svg);
     background-repeat: no-repeat;
     margin: auto;
 }
@@ -418,7 +418,7 @@ header {
 footer .seprator {
     width: 80px;
     height: 80px;
-    background-image: url(/images/seprator.svg);
+    background-image: url(./images/seprator.svg);
     background-repeat: no-repeat;
     transform: rotate(90deg);
     margin: auto 1rem;
